[tool.poetry]
name = "BiliBili_dynamic"
version = "0.0.5"
description = "将哔哩哔哩返回的数据渲染为类似与B站APP官方的分享图片"
authors = ["NGWORKS"]
license = "MIT"
readme = "./bilibili_dynamic/README.md"
repository = "https://github.com/NGWORKS/DynamicRender/"

[tool.poetry.dependencies]
python = "^3.5"
Pillow = "^8.0.1"
aiohttp = "^3.7.2"
qrcode = "^6.1"
pydantic = "^1.7.3"
pathlib = "^1.0.1"
matplotlib = "^3.4.0"
urllib3 = "^1.25.11"
fonttools = "^4.24.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"